syntax = "proto3";

import "./auth/main.proto";
import "./profile/main.proto";

package user;

service User {
  rpc SignUp(SignUp) returns (Status);
  rpc SignIn(SignIn) returns (SuccessSignIn);
  rpc Auth(Token) returns (AuthResponse);
  rpc GetUserId(UserName) returns (UserId);

  rpc UpdatePassword(UpdatePassword) returns (Status);
  rpc UpdateName(UpdateName) returns (Status);
  rpc DeleteProfile(DeleteProfile) returns (Status);
}

message Status {
  bool success = 1;
  string message = 2;
}

message UserId {
  string userId = 1;
}

message UserName {
  string name = 1;
}